# bfpmx

./: .clang-tidy  .gitignore  CMakeLists.txt  CPUArithmeticWithoutMarshalling  Makefile  README.md  cmake_install.cmake  fix-compile-commands.py  pyproject.toml  run-clang-tidy.sh  test.cpp  test_out  test_playground
.github/workflows/: build.yml  lint.yaml.yml  lint.yml  test.yml
bench/: CMakeLists.txt  mx_vec_ops.cpp
benchmarks/: CMakeLists.txt  error_trend.cpp  heat3d.cpp  jacobi.cpp  micro.cpp  mx_vec_ops.cpp  plot1.py  plot2.py
benchmarks/error/: drift.cpp  pure.cpp
benchmarks/plots/: heat3d_plots.py  jacobi_cycles_distributions.py  jacobi_plots.py  jacobi_runtime_steps.py  plot_utils.py
example/: CMakeLists.txt  cudatest.cpp  cudatest.cu  main.cpp  marshalling.cpp  marshalling_with_profiler.cpp  mx_vector.cpp  playground.cpp  quant.cpp
fixtures/: gen.py
mx/: .clang-tidy  prelude.h
mx/arch/: Arithmetic.h  IArithmetic.cpp  IArithmetic.h  prelude.h
mx/arch/cpu/: Aarch64.cpp  Aarch64.h  CPUArithmetic.h  CPUArithmetic.test.cpp  CPUArithmeticFastMarshalling.h  CPUArithmeticFastMarshalling.test.cpp  CPUArithmeticSingularValues.h  CPUArithmeticSingularValuesSimulate.h  CPUArithmeticWithoutMarshalling.h  CPUArithmeticWithoutMarshalling.test.cpp  aarch64.cpp  arithmetic.hpp  x86_64.cpp
mx/arch/gpu/: ArithmeticKernels.cu  ArithmeticKernels.cuh  CMakeLists.txt  CUDA.cpp  CUDA.h  FloatReprDevice.cuh  FloatReprMap.cuh  FusedKernel.cu  FusedKernel.cuh  GPUArithmetic.cu  GPUArithmetic.cuh  GPUArithmeticBlock.cuh  PackKernel.cu  PackKernel.cuh  PinnedMemoryPool.h  SpreadKernel.cu  SpreadKernel.cuh  StreamPool.h  common.cuh  cuda_utils.h  preludeGPU.cuh
mx/arch/gpu/mxvector/: GPUArithmetic.cuh
mx/definition/: alias.cpp  alias.h  block.cpp  prelude.h  util.cpp
mx/definition/block_float/block/: Block.cpp  Block.h  Block.test.cpp  BlockDims.h  BlockDims.test.cpp  LUT.hpp
mx/definition/block_float/factory/: BlockFactory.cpp  BlockFactory.h  BlockFactory.test.cpp
mx/definition/block_float/repr/: FloatRepr.cpp  FloatRepr.h  FloatRepr.test.cpp
mx/definition/quantization/: L2NormQuantization.h  MaximumFractionalQuantization.h  Quantize.h  Quantize.test.cpp  SharedExpQuantization.h  SharedExponentQuantization.h  prelude.h
mx/definition/vector/: DataLocation.h  MxVector.hpp  MxVector.test.cpp  MxVectorOperations.hpp
mx/helper/: test.h
mx/profiler/: csv_info.h  profiler.h
profiler/: profiler.h
test/: CMakeLists.txt  main.cpp  marshalling.cpp  playground.cpp  quant.cpp  test_large.cpp  test_math.cpp  test_quantization.cpp
tests/: main.cpp
